# ecc-test

./: Cargo.toml  README.md
data/: witness.txt
src/: lib.rs
