[package]
name = "ecc-test"
version = "0.1.0"
edition = "2021"


[dependencies]
arith = { git = "https://github.com/PolyhedraZK/Expander", tags = "v0..0.5" }
config = { git = "https://github.com/PolyhedraZK/Expander", tags = "v0..0.5" }
circuit = { git = "https://github.com/PolyhedraZK/Expander", tags = "v0..0.5" }
gkr = { git = "https://github.com/PolyhedraZK/Expander", tags = "v0..0.5" }
sha2 = "0.10.8"
rand = "0.8.5"